Update docs and changelog

--- a/docs/docs/modules/core/openapi/index.mdx
+++ b/docs/docs/modules/core/openapi/index.mdx
@@ -64,6 +64,7 @@ paths:
     { name: 'tegral-openapi-dsl', catalog: 'openapi.dsl' },
     { name: 'tegral-openapi-feature', catalog: 'openapi.feature' },
     { name: 'tegral-openapi-ktor', catalog: 'openapi.ktor' },
+    { name: 'tegral-openapi-ktor-resources', catalog: 'openapi.ktor.resources' },
     { name: 'tegral-openapi-ktorui', catalog: 'openapi.ktorui' },
     { name: 'tegral-openapi-scriptdef', catalog: 'openapi.scriptdef' },
     { name: 'tegral-openapi-scripthost', catalog: 'openapi.scripthost' },
