Add better behavior when no config sections are required

--- a/docs/docs/get-started/tutorial/step-1-hello-world.mdx
+++ b/docs/docs/get-started/tutorial/step-1-hello-world.mdx
@@ -224,6 +224,12 @@ port = 8123
 
 This tells Tegral to start our web application on port `8123`.
 
+:::tip No longer required
+
+Since Tegral 0.0.4, the configuration file is not required. If you do not provide one, Tegral will use the default configuration of serving on port 8080 for host `0.0.0.0`.
+
+:::
+
 ## Running our application
 
 We can now run our application! Click on the green triangle to the left of your `main` function, and choose "Run AppKt" to run the application.
