docs: rework homepage

--- a/docs/docs/modules/core/di/index.mdx
+++ b/docs/docs/modules/core/di/index.mdx
@@ -1,6 +1,10 @@
+---
+title: Tegral DI
+---
+
 import PackageVersions from '@site/src/components/PackageVersions';
 
-# Tegral DI
+# <img src="/img/tegral_logo_v2_di.svg"/> Tegral DI
 
 Tegral DI, formerly known as Shedinja, is an easy-to-use dependency injection framework for Kotlin, mainly inspired by [Koin](https://insert-koin.io) with the objective of being more flexible and safer.
 
