--- a/docs/docs/modules/core/openapi/index.mdx
+++ b/docs/docs/modules/core/openapi/index.mdx
@@ -1,6 +1,10 @@
+---
+title: Tegral OpenAPI
+---
+
 import PackageVersions from '@site/src/components/PackageVersions';
 
-# Tegral OpenAPI
+#  <img src="/img/tegral_logo_v2_openapi.svg"/> Tegral OpenAPI
 
 Tegral OpenAPI is a collection of libraries that allow you to:
 
