docs: release notes draft + misc. docs fixes

--- a/docs/docs/modules/core/di/getting-started.mdx
+++ b/docs/docs/modules/core/di/getting-started.mdx
@@ -64,14 +64,14 @@ dependencies {
 <!-- Add these to your dependencies -->
 <dependency>
     <groupId>guru.zoroark.tegral</groupId>
-    <artifactId>tegral-di-text</artifactId>
+    <artifactId>tegral-di</artifactId>
     <version>VERSION</version>
-    <scope>test</scope>
 </dependency>
 <dependency>
     <groupId>guru.zoroark.tegral</groupId>
     <artifactId>tegral-di-test</artifactId>
     <version>VERSION</version>
+    <scope>test</scope>
 </dependency>
 ```
 
